// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Droplist matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Droplist
    classes={
      Object {
        "block": "block",
        "bold": "bold",
        "group": "group",
        "groupCon": "groupCon",
        "item": "item",
        "right": "right",
      }
    }
    groupIdKey="id"
    groupItemsKey="items"
    groupNameKey="text"
    groups={false}
    itemIdKey="id"
    itemTextKey="text"
    itemTextRightKey="textRight"
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="item"
          onClick={[Function]}
        >
          
          <span
            className="bold"
          >
            
          </span>
          Administrador
          <span
            className="right"
          >
            (222)
          </span>
        </div>,
        <div
          className="item"
          onClick={[Function]}
        >
          
          <span
            className="bold"
          >
            
          </span>
          Administrador Sr
          <span
            className="right"
          >
            (134)
          </span>
        </div>,
        <div
          className="item"
          onClick={[Function]}
        >
          
          <span
            className="bold"
          >
            
          </span>
          Administrador Jr
          <span
            className="right"
          >
            (52)
          </span>
        </div>,
        <div
          className="item"
          onClick={[Function]}
        >
          
          <span
            className="bold"
          >
            
          </span>
          Administrar
          <span
            className="right"
          >
            (6)
          </span>
        </div>,
      ],
      "className": "block",
      "id": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "",
            <span
              className="bold"
            >
              
            </span>,
            "Administrador",
            <span
              className="right"
            >
              (222)
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          "",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "bold",
            },
            "ref": null,
            "rendered": "",
            "type": "span",
          },
          "Administrador",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "(222)",
              "className": "right",
            },
            "ref": null,
            "rendered": "(222)",
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "",
            <span
              className="bold"
            >
              
            </span>,
            "Administrador Sr",
            <span
              className="right"
            >
              (134)
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          "",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "bold",
            },
            "ref": null,
            "rendered": "",
            "type": "span",
          },
          "Administrador Sr",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "(134)",
              "className": "right",
            },
            "ref": null,
            "rendered": "(134)",
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "",
            <span
              className="bold"
            >
              
            </span>,
            "Administrador Jr",
            <span
              className="right"
            >
              (52)
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          "",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "bold",
            },
            "ref": null,
            "rendered": "",
            "type": "span",
          },
          "Administrador Jr",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "(52)",
              "className": "right",
            },
            "ref": null,
            "rendered": "(52)",
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "",
            <span
              className="bold"
            >
              
            </span>,
            "Administrar",
            <span
              className="right"
            >
              (6)
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          "",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "bold",
            },
            "ref": null,
            "rendered": "",
            "type": "span",
          },
          "Administrar",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "(6)",
              "className": "right",
            },
            "ref": null,
            "rendered": "(6)",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="item"
            onClick={[Function]}
          >
            
            <span
              className="bold"
            >
              
            </span>
            Administrador
            <span
              className="right"
            >
              (222)
            </span>
          </div>,
          <div
            className="item"
            onClick={[Function]}
          >
            
            <span
              className="bold"
            >
              
            </span>
            Administrador Sr
            <span
              className="right"
            >
              (134)
            </span>
          </div>,
          <div
            className="item"
            onClick={[Function]}
          >
            
            <span
              className="bold"
            >
              
            </span>
            Administrador Jr
            <span
              className="right"
            >
              (52)
            </span>
          </div>,
          <div
            className="item"
            onClick={[Function]}
          >
            
            <span
              className="bold"
            >
              
            </span>
            Administrar
            <span
              className="right"
            >
              (6)
            </span>
          </div>,
        ],
        "className": "block",
        "id": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "",
              <span
                className="bold"
              >
                
              </span>,
              "Administrador",
              <span
                className="right"
              >
                (222)
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            "",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "bold",
              },
              "ref": null,
              "rendered": "",
              "type": "span",
            },
            "Administrador",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "(222)",
                "className": "right",
              },
              "ref": null,
              "rendered": "(222)",
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "",
              <span
                className="bold"
              >
                
              </span>,
              "Administrador Sr",
              <span
                className="right"
              >
                (134)
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            "",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "bold",
              },
              "ref": null,
              "rendered": "",
              "type": "span",
            },
            "Administrador Sr",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "(134)",
                "className": "right",
              },
              "ref": null,
              "rendered": "(134)",
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "",
              <span
                className="bold"
              >
                
              </span>,
              "Administrador Jr",
              <span
                className="right"
              >
                (52)
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            "",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "bold",
              },
              "ref": null,
              "rendered": "",
              "type": "span",
            },
            "Administrador Jr",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "(52)",
                "className": "right",
              },
              "ref": null,
              "rendered": "(52)",
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "",
              <span
                className="bold"
              >
                
              </span>,
              "Administrar",
              <span
                className="right"
              >
                (6)
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            "",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "bold",
              },
              "ref": null,
              "rendered": "",
              "type": "span",
            },
            "Administrar",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "(6)",
                "className": "right",
              },
              "ref": null,
              "rendered": "(6)",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Droplist styles matches the snapshot 1`] = `
Object {
  "block": Object {
    "background": "#ffffff",
    "borderRadius": "0 0 5px 5px",
    "boxShadow": "0 1px 14px rgba(0, 0, 0, 0.1)",
    "padding": "5px 0",
  },
  "bold": Object {
    "fontWeight": "700",
  },
  "group": Object {
    "color": "#727272",
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": "11px",
    "lineHeight": "28px",
    "padding": "0 8px",
  },
  "groupCon": Object {
    "borderBottom": "#ebebeb",
  },
  "item": Object {
    "&:hover": Object {
      "& $right": Object {
        "color": "#ffffff",
      },
      "background": "#1476fb",
      "color": "#ffffff",
    },
    "color": "#727272",
    "cursor": "pointer",
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": "15px",
    "lineHeight": "28px",
    "padding": "0 8px",
    "transition": "0.1s all",
  },
  "right": Object {
    "color": "#bfbfbf",
    "float": "right",
    "transition": "0.1s all",
  },
}
`;

exports[`DroplistJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Droplist)
    groupIdKey="id"
    groupItemsKey="items"
    groupNameKey="text"
    groups={false}
    itemIdKey="id"
    itemTextKey="text"
    itemTextRightKey="textRight"
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "block": "Droplist-block-0-1-1",
        "bold": "Droplist-bold-0-1-6",
        "group": "Droplist-group-0-1-3",
        "groupCon": "Droplist-groupCon-0-1-2",
        "item": "Droplist-item-0-1-4",
        "right": "Droplist-right-0-1-5",
      },
      "groupIdKey": "id",
      "groupItemsKey": "items",
      "groupNameKey": "text",
      "groups": false,
      "itemIdKey": "id",
      "itemTextKey": "text",
      "itemTextRightKey": "textRight",
      "items": Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "block": "Droplist-block-0-1-1",
          "bold": "Droplist-bold-0-1-6",
          "group": "Droplist-group-0-1-3",
          "groupCon": "Droplist-groupCon-0-1-2",
          "item": "Droplist-item-0-1-4",
          "right": "Droplist-right-0-1-5",
        },
        "groupIdKey": "id",
        "groupItemsKey": "items",
        "groupNameKey": "text",
        "groups": false,
        "itemIdKey": "id",
        "itemTextKey": "text",
        "itemTextRightKey": "textRight",
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
